# m-ath-threat-hunting-catalog

./: .gitignore  README.md  kpi_tracker.py  proposal_memory_anomaly.md  start_jupyterlab.ps1  start_jupyterlab.py
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: propose_data_source.yml  propose_scenario.yml
.github/workflows/: run-tests.yml  (+9 more)
PEAK/: splunk_blog_security_peak-framework-math-model-assisted-threat-hunting.md
config/: .env.example  suspicious_registrars.conf
data_transform/: README.md  data_anonymisation.input.example  data_anonymisation.py  data_deduplication.py
detection_logics/: README.md  __init__.py  dns_suspicious_string.input  dns_suspicious_string.py  idn_security_analysis.py  pyproject.toml  s1_triage.py  vt_verdict_not_clean.py
docs/: CONTRIBUTING.md  custom_skills.md  development.md  workflows.md
exclusions/: reviewed_parent_domains.conf.example
install/: bootstrap_jupyter_venv.ps1  bootstrap_jupyter_venv.py  bootstrap_scenario_venv.ps1  bootstrap_scenario_venv.sh  install_dependencies.ps1  install_dependencies.sh  requirements.txt  requirements_jupyter.txt
scenarios/: catalog.csv  kpis.csv  kpis.csv.example
scripts/: add_virustotal_verdicts.py  audit_peak_compliance.py  bootstrap_scenarios.py  check_art_scenarios.py  clean_notebook.py  fetch_sentinelone.py  json_to_csv.py  kpi_tracker.py  migrate_existing_scenarios.py  pre_commit_check.py  propose_scenario.py  run_analysis.py  start_jupyterlab.ps1  start_jupyterlab.py  update_catalog_folders.py
tests/: test_generate_scenario.py  test_kpi_tracker.py  test_peak_compliance.py
(+99 files in other folders)
