[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detection_logics"
version = "0.1.0"
description = "Shared scoring and enrichment rules for threat hunting scenarios"
requires-python = ">=3.8"
dependencies = [
    "idna>=3.7",
]

[tool.setuptools]
packages = ["detection_logics"]
package-dir = {"detection_logics" = "."}
